# ibwa

./: .gitignore  CMakeLists.txt  INSTALL.md  Makefile  README.md  bamlite.c  bntseq.c  bntseq.h  bwapair.c  bwapair.h  bwape.c  bwaremap.c  bwaremap.cpp  bwaremap.h  bwase.c  bwase.h  bwasw.c  bwasw.h  bwtaln.h  bwtcache.c  bwtcache.h  byteorder.c  byteorder.h  cs2nt.c  dbset.c  dbset.h  filter_alignments.cpp  filter_alignments.h  gmt.yml  main.c  main.h  saiset.c  saiset.h  threadblock.c  threadblock.h  translate_cigar.cpp  translate_cigar.h  version.h.in
bwt_gen/: CMakeLists.txt
gmt/: documentation.md
gmt-web/: common.yml
gmt-web/content/: documentation.md  index.md  install.md
parse/: README  prepare-grch37.pl
